--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "keepcoding",
   "version": "0.0.1",
   "description": "Simple project to learn by doing",
-  "main": "index.js",
+  "main": "Gulpfile.js",
   "repository": "git@github.com:davijose40/keepcoding.git",
   "author": "davijose <davijose40@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.1.0"
+  }
 }
